add a.vim needed for projectionist plug

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -2,6 +2,7 @@ tap 'dart-lang/dart'
 tap 'homebrew/cask'
 tap 'homebrew/cask-fonts'
 tap 'homebrew/core'
+tap 'dnote/dnote'
 brew 'aom'
 brew 'cairo'
 brew 'cscope'
@@ -107,6 +108,7 @@ brew 'xz'
 brew 'yarn'
 brew 'youtube-dl'
 brew 'zsh-syntax-highlighting'
+brew 'dnote'
 cask 'balenaetcher'
 cask 'font-meslo-nerd-font'
 cask 'iterm2'
