--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,8 +12,8 @@
 # Session options
 # -------------------------------------------------------------------
 # Change bind key to ctrl-a
-unbind-key c-b
-set-option -g prefix c-a
+#unbind-key c-b
+#set-option -g prefix c-a
 
 # Index starts from 1
 set-option -g base-index 1
@@ -60,7 +60,7 @@ set-window-option -g mode-keys vi
 bind-key c new-window -c "#{pane_current_path}"
 
 # prefix ctrl-a
-bind-key c-a last-window
+#bind-key c-a last-window
 
 # prefix a
 bind-key a send-prefix
