plugings clean up

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -105,8 +105,9 @@ bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
 bind-key M-c run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
 
 # Notes
-bind-key C-n if-shell "tmux select-window -t NOTES" "" \
-  "new-window -n NOTES 'bash -i ~/gdrive/sync/notes/list'"
+bind-key C-n if-shell "tmux select-window -t notes" "" \
+  "new-window -n notes 'cd ~/.notes && vi .'"
+#  "new-window -n NOTES 'bash -i ~/gdrive/sync/notes/list'"
 
 # -------------------------------------------------------------------
 # fzf integration
@@ -137,3 +138,10 @@ bind 'C-l' send-keys 'C-l'
 # MacOS Sierra Clipboard fixes, needs reattach-to-user-namespace
 #set -g default-shell $SHELL
 #set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
