--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,7 +34,7 @@ set-option -g history-limit 102400
 set-option -g repeat-time 500
 
 # 256-color terminal
-set-option -g default-terminal "xterm-256color"
+set-option -g default-terminal "screen-256color"
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 # true color terminal
 set-option -ga terminal-overrides ",xterm-256color:Tc"
